--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         </div>
         <!-- Tambahkan ikon menu disini -->
         <div class="header-left"></div>
-        <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
           <a href="#A">About Us</a>
           <a href="#B">Our Serve</a>
@@ -35,7 +34,7 @@
           <a href="#" class="btn signup">Whatsapp Me</a>
           <p>or</p>
           <a href="#" class="btn facebook">Follow our <span class="fa fa-facebook"></span> Facebook</a>
-          <a href="#" class="btn twitter">Follow our <span class="fa fa-twitter"></span> Instagram</a>
+          <a href="#" class="btn twitter">Follow our <span class="fa fa-instagram"></span> Instagram</a>
         </div>
       </div>
     </div>
