--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Whatsapp Me</a>
           <p>or</p>
-          <a href="#" class="btn facebook">Follow our <span class="fa fa-facebook"></span> Facebook</a>
-          <a href="#" class="btn twitter">Follow our <span class="fa fa-instagram"></span> Instagram</a>
+          <a href="https://www.facebook.com/Innova3DPrinter/" class="btn facebook">Follow our <span class="fa fa-facebook"></span> Facebook</a>
+          <a href="https://www.instagram.com/invites/contact/?i=1krgne4g0g5no&utm_content=hnmyrq0" class="btn twitter">Follow our <span class="fa fa-instagram"></span> Instagram</a>
         </div>
       </div>
     </div>
