--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <p>We serve 3d print for your problem, please contact us for the solution</p>
         <p>You can consutation for your projek, prototype, or making your product</p>
         <div class="btn-wrapper">
-          <a href="http://wa.me/6285664530211" class="btn signup">Whatsapp Me</a>
+          <a href="http://wa.me/6285664530211" class="btn signup"><span class="fa fa-whatsapp"></span> Whatsapp Me</a>
           <p>or</p>
           <a href="https://www.facebook.com/Innova3DPrinter/" class="btn facebook">Follow our <span class="fa fa-facebook"></span> Facebook</a>
-          <a href="https://www.instagram.com/invites/contact/?i=1krgne4g0g5no&utm_content=hnmyrq0" class="btn twitter">Follow our <span class="fa fa-instagram"></span> Instagram</a>
+          <a href="https://www.instagram.com/invites/contact/?i=4yd9ajy756vc&utm_content=hkot6dc" class="btn twitter">Follow our <span class="fa fa-instagram"></span> Instagram</a>
         </div>
       </div>
     </div>
