--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="btn-wrapper">
           <a href="http://wa.me/6285664530211" class="btn signup"><span class="fa fa-whatsapp"></span> Whatsapp Me</a>
           <p>or</p>
-          <a href="https://www.facebook.com/Innova3DPrinter/" class="btn facebook">Follow our <span class="fa fa-facebook"></span> Facebook</a>
-          <a href="https://www.instagram.com/invites/contact/?i=4yd9ajy756vc&utm_content=hkot6dc" class="btn twitter">Follow our <span class="fa fa-instagram"></span> Instagram</a>
+          <a href="https://www.facebook.com/Innova3DPrinter/" class="btn facebook">Like our  <span class="fa fa-facebook"></span> Facebook</a>
+          <a href="https://www.instagram.com/invites/contact/?i=4yd9ajy756vc&utm_content=hkot6dc" class="btn twitter">Follow our  <span class="fa fa-instagram"></span> Instagram</a>
         </div>
       </div>
     </div>
