--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="image/logo.jpeg">
+          <img class="logo" src="image/logonew.png">
         </div>
         <!-- Tambahkan ikon menu disini -->
         <div class="header-left"></div>
