--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="btn-wrapper">
           <a href="http://wa.me/6285664530211" class="btn signup"><span class="fa fa-whatsapp"></span> Whatsapp Me</a>
           <p>or</p>
-          <a href="https://www.facebook.com/Innova3DPrinter/" class="btn facebook">Like our  <span class="fa fa-facebook"></span> Facebook</a>
-          <a href="https://www.instagram.com/invites/contact/?i=4yd9ajy756vc&utm_content=hkot6dc" class="btn twitter">Follow our  <span class="fa fa-instagram"></span> Instagram</a>
+          <a href="https://www.facebook.com/Innova3DPrinter/" class="btn facebook"><span class="fa fa-facebook"></span> Like our Facebook</a>
+          <a href="https://www.instagram.com/invites/contact/?i=4yd9ajy756vc&utm_content=hkot6dc" class="btn twitter"><span class="fa fa-instagram"></span> Follow our Instagram</a>
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="image/2.jpeg">
+              <img src="image/2 new.jpeg">
                <p>Designing</p>
             </div>
              <p class="text-contents">We can making design for you</p>
