--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="image/2new.jpeg">
+              <img src="image/2new.jpg">
                <p>Designing</p>
             </div>
              <p class="text-contents">We can making design for you</p>
